[package]
name = "cfd-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Watertight CFD mesh generation for millifluidic devices — GhostCell-permissioned, indexed, BSP-based"
keywords = ["mesh", "cfd", "millifluidic", "watertight", "ghostcell"]
categories = ["science", "simulation"]

[features]
default = []
millifluidic = []
parallel = ["dep:rayon"]
# csg is always compiled; the feature flag is kept as a no-op marker so that
# downstream crates that activate cfd-mesh/csg continue to build without error.
csg = []
stl-io = []
vtk-io = []
scheme-io = ["dep:cfd-schematics"]

[dependencies]
# Math
nalgebra = { workspace = true }
num-traits = { workspace = true }
approx = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Data structures
indexmap = { workspace = true }
slotmap = { workspace = true }

# Mesh / geometry — state-of-the-art kernel
geometry-predicates = { workspace = true }
rstar               = { workspace = true }
kiddo               = { workspace = true }
bvh                 = { workspace = true }
spade               = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Hashing
hashbrown = "0.15"

# Parallelism (optional)
rayon = { workspace = true, optional = true }

# Internal crates (optional)
cfd-schematics = { workspace = true, optional = true }

# Logging
tracing = { workspace = true }

# Documentation diagrams
aquamarine = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

# ── Primitive validation examples ─────────────────────────────────────────────

[[example]]
name = "primitives_tetrahedron"
path = "examples/primitives/tetrahedron.rs"

[[example]]
name = "primitives_cube"
path = "examples/primitives/cube.rs"

[[example]]
name = "primitives_sphere"
path = "examples/primitives/sphere.rs"

[[example]]
name = "primitives_cylinder"
path = "examples/primitives/cylinder.rs"

[[example]]
name = "primitives_cone"
path = "examples/primitives/cone.rs"

[[example]]
name = "primitives_torus"
path = "examples/primitives/torus.rs"

[[example]]
name = "primitives_venturi"
path = "examples/primitives/venturi.rs"

[[example]]
name = "primitives_linear_sweep"
path = "examples/primitives/linear_sweep.rs"

[[example]]
name = "primitives_revolution_sweep"
path = "examples/primitives/revolution_sweep.rs"

# ── CSG boolean operation examples ────────────────────────────────────────────

[[example]]
name = "csg_cube_cube"
path = "examples/csg/cube_cube.rs"

[[example]]
name = "csg_cube_sphere"
path = "examples/csg/cube_sphere.rs"

[[example]]
name = "csg_cube_cylinder"
path = "examples/csg/cube_cylinder.rs"

[[example]]
name = "csg_sphere_cylinder"
path = "examples/csg/sphere_cylinder.rs"

[[example]]
name = "csg_sphere_sphere"
path = "examples/csg/sphere_sphere.rs"

[[example]]
name = "csg_cylinder_cylinder"
path = "examples/csg/cylinder_cylinder.rs"

