[package]
name = "cfd-optim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Optimization and mesh handoff pipeline for millifluidic design scenarios"
keywords = ["optimization", "millifluidics", "cfd"]
categories = ["science", "simulation"]

[features]
default = []
mesh-export = ["dep:cfd-mesh"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
rayon.workspace = true
petgraph.workspace = true
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }

cfd-core = { workspace = true, default-features = false }
cfd-1d.workspace = true
cfd-math.workspace = true
cfd-schematics.workspace = true

cfd-mesh = { workspace = true, optional = true }

[dev-dependencies]
cfd-2d.workspace = true
cfd-3d.workspace = true
cfd-mesh.workspace = true
cfd-validation.workspace = true
nalgebra.workspace = true
anyhow.workspace = true
proptest.workspace = true

[[example]]
name = "sdt_export"
path = "examples/sdt_export.rs"

[[example]]
name = "sdt_evo"
path = "examples/sdt_evo.rs"

[[example]]
name = "sdt_therapy"
path = "examples/sdt_therapy.rs"

[[example]]
name = "sdt_random"
path = "examples/sdt_random.rs"

[[example]]
name = "sdt_scenario_audit"
path = "examples/sdt_scenario_audit.rs"

[[example]]
name = "sdt_pipeline"
path = "examples/sdt_pipeline.rs"
required-features = ["mesh-export"]

[[example]]
name = "sdt_top5_final"
path = "examples/sdt_top5_final.rs"
required-features = ["mesh-export"]

[[example]]
name = "sdt_2d_validation"
path = "examples/sdt_2d_validation.rs"

[[example]]
name = "optim_pipeline"
path = "examples/optim_pipeline.rs"

[[example]]
name = "cascade_2d_3d_validation"
path = "examples/cascade_2d_3d_validation.rs"
