[package]
name = "cfd-optim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Optimization and mesh handoff pipeline for millifluidic design scenarios"
keywords = ["optimization", "millifluidics", "cfd"]
categories = ["science", "simulation"]

[features]
default = []
mesh-export = ["dep:cfd-mesh"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
rayon.workspace = true
petgraph.workspace = true
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
sha2 = "0.10"

cfd-core = { workspace = true, default-features = false }
cfd-1d.workspace = true
cfd-math.workspace = true
cfd-schematics.workspace = true

cfd-mesh = { workspace = true, optional = true }

[dev-dependencies]
cfd-2d.workspace = true
cfd-3d.workspace = true
cfd-mesh.workspace = true
cfd-validation.workspace = true
nalgebra.workspace = true
anyhow.workspace = true
proptest.workspace = true

[[example]]
name = "milestone12_report"
path = "examples/milestone12_report.rs"

[[example]]
name = "milestone12_analysis"
path = "examples/milestone12_analysis.rs"

[[example]]
name = "audit"
path = "examples/audit.rs"

[[example]]
name = "cascade_2d_3d_validation"
path = "examples/cascade_2d_3d_validation.rs"

[[example]]
name = "sdt_cif_separation"
path = "examples/sdt_cif_separation.rs"

[[example]]
name = "sdt_cif_mesh"
path = "examples/sdt_cif_mesh.rs"
required-features = ["mesh-export"]
