[package]
name = "cfd-optim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Optimization and mesh handoff pipeline for millifluidic design scenarios"
keywords = ["optimization", "millifluidics", "cfd"]
categories = ["science", "simulation"]

[features]
default = []

[dependencies]
bincode.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
rayon.workspace = true
petgraph.workspace = true
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
cfd-core = { workspace = true, default-features = false }
cfd-1d.workspace = true
cfd-2d.workspace = true
cfd-3d.workspace = true
cfd-mesh.workspace = true
cfd-math.workspace = true
cfd-schematics.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
cfd-validation.workspace = true
nalgebra.workspace = true
anyhow.workspace = true
proptest.workspace = true

[[example]]
name = "milestone12_report"
path = "examples/milestone12_report.rs"

[[example]]
name = "milestone12_validation"
path = "examples/milestone12_validation.rs"

[[example]]
name = "milestone12_option1"
path = "examples/milestone12_option1.rs"

[[example]]
name = "milestone12_option2"
path = "examples/milestone12_option2.rs"

[[example]]
name = "milestone12_ga"
path = "examples/milestone12_ga.rs"
