[package]
name = "cfd-validation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Validation framework and benchmark problems for CFD simulations"

[dependencies]
cfd-core.workspace = true
cfd-math.workspace = true
cfd-io.workspace = true
cfd-2d.workspace = true
nalgebra.workspace = true
nalgebra-sparse.workspace = true
num-traits.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
approx.workspace = true
tracing.workspace = true
chrono = "0.4"
num_cpus = "1.16"
num-complex.workspace = true
rayon.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "convergence_benchmarks"
harness = false
