[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pycfdrs"
version = "0.1.0"
description = "Python bindings for CFD-rs CFD solvers"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "CFD-rs Contributors", email = "info@cfd-rs.dev"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.21",
    "matplotlib>=3.5",
    "pandas>=1.3",
]
validation = [
    "numpy>=1.21",
    "matplotlib>=3.5",
    "pandas>=1.3",
    "scipy>=1.7",
    "jupyter>=1.0",
]
